apps/radarr/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  template:
    spec:
      containers:
        - name: radarr
          volumeMounts:
            - name: movies-data
              mountPath: /data/movies
            - name: downloads-data
              mountPath: /downloads
      volumes:
        - name: movies-data
          persistentVolumeClaim:
            claimName: movies-data
        - name: downloads-data
          persistentVolumeClaim:
            claimName: downloads-data
