apps/radarr/overlays/nishir/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radarr
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: bazarr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jellyfin
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: seerr
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prowlarr
      ports:
        - port: https
